--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "node ./lib/index.js",
     "make": "6to5 src --out-dir lib",
     "make-start": "npm run make && npm start",
-    "test": "CONN=\"postgres://meteor:meteor@127.0.0.1/meteor_test\" CHANNEL=\"package_test\" DEBUG=0 STATS=1 nodeunit test/index.js"
+    "test": "CONN=\"postgres://meteor:meteor@127.0.0.1/meteor_test\" CHANNEL=\"package_test\" DEBUG=0 STATS=1 CLASS_COUNT=1 nodeunit test/index.js"
   },
   "keywords": [
     "postgresql",
