--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	"dependencies": {
 		"pg"            : "^4.2.0",
 		"lodash"        : "^3.1.0",
+		"moment"        : "2.9.0",
 		"deep-diff"     : "^0.3.0",
 		"murmurhash-js" : "^1.0.0"
 	}
