--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"pg"             : "^4.2.0",
 		"lodash"         : "^3.1.0",
 		"murmurhash-js"  : "^1.0.0",
-		"random-strings" : "^0.0.1"
+		"random-strings" : "^0.0.1",
+		"sql-parser"     : "0.4.0"
 	}
 }
