--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"lodash"         : "^3.1.0",
 		"murmurhash-js"  : "^1.0.0",
 		"random-strings" : "^0.0.1",
-		"sql-parser"     : "0.5.0"
+		"sql-parser"     : "0.5.0",
+		"md5"            : "1.0.0"
 	}
 }
