--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pg-live-query",
   "version": "1.0.0",
-  "description": "Subscribe to query updates in PostgreSQL",
+  "description": "(Almost) realtime query update events in PostgreSQL",
   "main": "index.js",
   "scripts": {
     "test": "node test/test.js"
